Release/v1.0.0 alpha.2 (#109)
- **Removing of Unknown Slices and Profiles**

- **Diverse Bug Fixes in extraction process and reactive chain **
- **Fixed Search Params in Queries**

---------

Co-authored-by: Julian Gründner <juliangruendner@googlemail.com>
Co-authored-by: Bastian Schaffer <bastianschaffer.it@gmail.com>
Co-authored-by: Alexander Kiel <alexanderkiel@gmx.net>