@@ -1,5 +1,6 @@
 package de.medizininformatikinitiative.torch.util;
 
+import org.hl7.fhir.exceptions.FHIRException;
 import org.hl7.fhir.r4.model.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -7,6 +8,9 @@ import org.slf4j.LoggerFactory;
 import java.util.List;
 import java.util.Objects;
 
+/**
+ * Resolves Slicing Discriminators. Essential for handling slicing
+ */
 public class DiscriminatorResolver {
 
     private static final Logger logger = LoggerFactory.getLogger(DiscriminatorResolver.class);
@@ -17,25 +21,19 @@ public class DiscriminatorResolver {
      * @param base          Element to be sliced
      * @param slice         ElementDefinition of the slice
      * @param discriminator Discriminator to be resolved
-     * @param elementID     path to the element
      * @param snapshot      Snapshot of the StructureDefinition
-     * @return
+     * @return true if Discriminator could be resolved, false otherwise
      */
     public static Boolean resolveDiscriminator(Base base, ElementDefinition slice, ElementDefinition.ElementDefinitionSlicingDiscriminatorComponent discriminator, StructureDefinition.StructureDefinitionSnapshotComponent snapshot) {
-        //System.out.println("Discriminator "+discriminator);
         return switch (discriminator.getType().toCode()) {
-            case "exists" -> false;
             case "pattern", "value" ->
                     resolvePattern(base, slice, discriminator, snapshot); //pattern is deprecated and functionally equal to value
-            case "profile" -> false;  //
             case "type" -> resolveType(base, slice, discriminator, snapshot);
             default -> false;
         };
 
 
     }
-
-
 
 
     /**
@@ -64,8 +62,6 @@ public class DiscriminatorResolver {
     private static Boolean resolvePattern(Base base, ElementDefinition slice,
                                           ElementDefinition.ElementDefinitionSlicingDiscriminatorComponent discriminator,
                                           StructureDefinition.StructureDefinitionSnapshotComponent snapshot) {
-        // Resolve the element containing the fixed or pattern information.
-        //logger.debug("Element to be resolved {} {} ", slice.getId(), discriminator.getPath());
         ElementDefinition elementContainingInfo = resolveSlicePath(slice, discriminator, snapshot);
 
         // Resolve the base element along the path specified by the discriminator.
@@ -84,7 +80,7 @@ public class DiscriminatorResolver {
         if (elementContainingInfo.hasFixedOrPattern()) {
 
             // Get the fixed value or pattern from the element definition.
-            Base fixedOrPatternValue = elementContainingInfo.getFixedOrPattern();
+            Type fixedOrPatternValue = elementContainingInfo.getFixedOrPattern();
             return compareBaseToFixedOrPattern(resolvedBase, fixedOrPatternValue);
 
         }
@@ -93,46 +89,71 @@ public class DiscriminatorResolver {
         return false;
     }
 
-    // Custom comparison method
     private static boolean compareBaseToFixedOrPattern(Base resolvedBase, Base fixedOrPatternValue) {
-        // Implement the logic to compare resolvedBase to fixedOrPatternValue
-        // You may need to recursively compare the elements that are defined in fixedOrPatternValue
-        // Example: if fixedOrPatternValue is a complex type, iterate over its children
-        if (!Objects.equals(resolvedBase.fhirType(), fixedOrPatternValue.fhirType())) {
-            logger.warn("Incompatible Data types when comparing {} {}",resolvedBase.fhirType(), fixedOrPatternValue.fhirType());
+        // Handle null inputs
+        if (resolvedBase == null || fixedOrPatternValue == null) {
+            logger.trace("One or both inputs are null: resolvedBase={}, fixedOrPatternValue={}", resolvedBase, fixedOrPatternValue);
             return false;
         }
 
+        // Check if FHIR types match
+        if (!Objects.equals(resolvedBase.fhirType(), fixedOrPatternValue.fhirType())) {
+            logger.trace("Incompatible Data types when comparing {} {}", resolvedBase.fhirType(), fixedOrPatternValue.fhirType());
+            return false;
+        }
+
+        // Handle primitive types
         if (fixedOrPatternValue.isPrimitive()) {
             logger.trace("Handling Primitive Types  {}", fixedOrPatternValue.getIdBase());
             return resolvedBase.equalsDeep(fixedOrPatternValue);
         } else {
             logger.trace("Handling Complex Types  {}", fixedOrPatternValue.fhirType());
-            // Iterate over the children of fixedOrPatternValue and compare them to the corresponding children in resolvedBase
-            for (Property child : fixedOrPatternValue.children()) {
-                if (child.hasValues()) {
 
-                    String childName = child.getName();
-                    Property resolvedChild = resolvedBase.getChildByName(childName);
+            // Collect children from fixedOrPatternValue
+            List<Property> fixedChildren = fixedOrPatternValue.children().stream()
+                    .filter(Property::hasValues)
+                    .toList();
 
-                    logger.trace("Handling Child {} {}", childName, resolvedChild);
+            // Collect children from resolvedBase
+            List<Property> resolvedChildren = resolvedBase.children().stream()
+                    .filter(Property::hasValues)
+                    .toList();
 
-                    // If the resolved base doesn't have this child, return false
-                    if (resolvedChild == null) {
-                        return false;
-                    } else {
-                        try {
-                            return compareBaseToFixedOrPattern(resolvedChild.getValues().get(0), child.getValues().get(0));
-                        }catch(IndexOutOfBoundsException ex){
-                            return false;
-                        }
-                    }
+            // Check if the number of children matches
+            if (fixedChildren.size() > resolvedChildren.size()) {
+                logger.trace("Mismatch in number of children: fixedOrPatternValue has {} children, resolvedBase has {} children",
+                        fixedChildren.size(), resolvedChildren.size());
+                return false;
+            }
+
+            // Iterate through each child in fixedOrPatternValue
+            for (Property fixedChild : fixedChildren) {
+                String childName = fixedChild.getName();
+                Property resolvedChild = resolvedBase.getChildByName(childName);
+
+                logger.trace("Handling Child {} {}", childName, resolvedChild);
+
+                // If the resolved base doesn't have this child, return false
+                if (resolvedChild == null || !resolvedChild.hasValues()) {
+                    logger.trace("Missing or isEmpty child '{}' in resolvedBase", childName);
+                    return false;
                 }
 
-            }
-        }
-        return true;
+                // Compare the first value of each child
+                Base resolvedChildValue = resolvedChild.getValues().getFirst();
+                Base fixedChildValue = fixedChild.getValues().getFirst();
 
+                // Recursive comparison
+                boolean childComparison = compareBaseToFixedOrPattern(resolvedChildValue, fixedChildValue);
+                if (!childComparison) {
+                    logger.trace("Mismatch found in child '{}'", childName);
+                    return false;
+                }
+            }
+
+            // All children matched
+            return true;
+        }
     }
 
 
@@ -143,7 +164,7 @@ public class DiscriminatorResolver {
      * @param discriminator The discriminator that contains the path
      * @return The resolved element if the path is valid, null otherwise
      */
-    private static Base resolveElementPath(Base base, ElementDefinition.ElementDefinitionSlicingDiscriminatorComponent discriminator) {
+    private static Base resolveElementPath(Base base, ElementDefinition.ElementDefinitionSlicingDiscriminatorComponent discriminator) throws FHIRException {
         // Extract the path from the discriminator
 
         String path = discriminator.getPath();
@@ -156,23 +177,27 @@ public class DiscriminatorResolver {
 
         // Start with the base element
         Base currentElement = base;
+        try {
+            // Iterate through each part of the path
+            for (String part : parts) {
+                if (currentElement == null) {
+                    return null;
+                }
+                // Resolve the next element based on the current part of the path
+                List<Base> nextElements = currentElement.listChildrenByName(part);
 
-        // Iterate through each part of the path
-        for (String part : parts) {
-            if (currentElement == null) {
-                return null;
+
+                // If there are no elements matching this part of the path, return null
+                if (nextElements == null || nextElements.isEmpty()) {
+                    return null;
+                }
+
+                // Move to the next element in the path
+                currentElement = nextElements.getFirst();
             }
-
-            // Resolve the next element based on the current part of the path
-            List<Base> nextElements = currentElement.listChildrenByName(part);
-
-            // If there are no elements matching this part of the path, return null
-            if (nextElements == null || nextElements.isEmpty()) {
-                return null;
-            }
-
-            // Move to the next element in the path
-            currentElement = nextElements.get(0);
+        } catch (FHIRException e) {
+            logger.error("In Slicing Base  {} contains no valid children", currentElement.getIdBase());
+            return null;
         }
 
         // Return the resolved element
@@ -186,12 +211,18 @@ public class DiscriminatorResolver {
      * @param base     Element to be sliced
      * @param slice    ElementDefinition of the slice
      * @param snapshot Snapshot of the StructureDefinition
-     * @return
+     * @return true if type can be resolved and false if not
      */
-    private static Boolean resolveType(Base base, ElementDefinition slice, ElementDefinition.ElementDefinitionSlicingDiscriminatorComponent
-            discriminator, StructureDefinition.StructureDefinitionSnapshotComponent snapshot) {
+    private static Boolean resolveType(Base base, ElementDefinition slice, ElementDefinition.ElementDefinitionSlicingDiscriminatorComponent discriminator, StructureDefinition.StructureDefinitionSnapshotComponent snapshot) {
         ElementDefinition elementContainingInfo = resolveSlicePath(slice, discriminator, snapshot);
-        return base.fhirType().equalsIgnoreCase(elementContainingInfo.getType().get(0).getWorkingCode());
+
+        // Check if the element contains any type information
+        if (elementContainingInfo.getType().isEmpty()) {
+            return false; // No type information means the type cannot be resolved, so return false
+        }
+
+        // Proceed with the type comparison
+        return base.fhirType().equalsIgnoreCase(elementContainingInfo.getType().getFirst().getCode());
     }
 
 
